added g analytics and seo stuff

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Nora Kako personal website. Nora Kako is a product and UX/UI designer based in San Francisco. She is the founder and lead designer at Flock Studio (flocksf.com)."
+    />
+    <meta
+      name="keywords"
+      content="nora kako, kako, designer, product designer, UX/UI designer"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,6 +33,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Nora Kako</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4ZM0Z83SHE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-4ZM0Z83SHE');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
